<resources>
    <string name="app_name">mail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hashaan</string>
    <string name="nav_header_subtitle">tkhashaanadeen@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sent">Sent</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_outbox">Outbox</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_all">All mail</string>
    <string name="Trash">Trash</string>
    <string name="contacts">Contacts</string>
    <string name="Settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
